# sworn

./: .gitignore  AGENTS.md  COMPLIANCE_SCOPE.md  GOVERNANCE_OVERVIEW.md  LICENSE  README.md  RELEASE_PROCESS.md  SECURITY.md  STATE_REPORT.md  action.yml  pyproject.toml  release-phase0-manifest-template.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  config.md
examples/: sworn-ci.yml
release-evidence/0.3.0/: MANIFEST.md  build-timestamp-utc.txt  dist-shas.txt  env-uname.txt  evidence-package.sha256  pip-freeze.txt  release-sha.txt  sworn-module-help.txt
release-evidence/0.4.0/: MANIFEST.md  build-timestamp-utc.txt  dist-shas.txt  evidence-package.sha256  phase0-start-sha.txt  pip-freeze.txt
scripts/: release_phase0_readiness.sh  release_phase1_capture.sh  release_smoke.py  release_static_guard.py
src/sworn/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  resolver.py
src/sworn/evidence/: cmmc_report.py  log.py  report.py  signing.py
src/sworn/gates/: allowlist.py  identity.py  security.py
src/sworn/kernels/: allowlist_kernel.py  audit_kernel.py  sdk.py  (+1 more)
tests/: conftest.py  test_ci_check.py  test_cli.py  test_cli_keygen.py  test_config.py  test_distribution_metadata.py  test_pipeline.py  test_release_automation.py  test_resolver.py
tests/test_evidence/: test_cmmc_report.py  test_log.py  test_report.py  test_signing.py
tests/test_gates/: test_allowlist.py  test_identity.py  test_security.py
tests/test_kernels/: test_allowlist_kernel.py  test_audit_kernel.py  test_sdk.py  test_security_kernel.py
(+19 files in other folders)
