[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sworncode"
version = "0.1.0"
description = "Deterministic, fail-closed AI code governance. Every commit is sworn."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Centennial Defense Systems", email = "cj@sworncode.dev"},
]
keywords = ["governance", "security", "compliance", "ai", "git", "cmmc", "soc2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://sworncode.dev"
Repository = "https://github.com/CentennialDefenseSystemsInc/sworn"
Issues = "https://github.com/CentennialDefenseSystemsInc/sworn/issues"

[project.scripts]
sworn = "sworn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
